duniverse/expect_test_helpers_core/expect_test_helpers_base/test/test_type_errors.mlt
open! Base
open! Expect_test_helpers_base

let () = require_equal [%here] ()

[%%expect
  {|
Line _, characters _-_:
Error: This expression has type unit but an expression was expected of type
         (module Expect_test_helpers_base.With_equal with type t = 'a)
|}]

let () = require_compare_equal [%here] ()

[%%expect
  {|
Line _, characters _-_:
Error: This expression has type unit but an expression was expected of type
         (module Expect_test_helpers_base.With_compare with type t = 'a)
|}]
